# aimless-onions

./: ARTIFACT-EVALUATION.md  Benchmark.ipynb  Dockerfile  LICENSE  README.md  accuracy.py  doublechoose.py  requirements.txt
aimless-onions/: .gitignore  2023-11-08-14-00-00-consensus  Cargo.toml  default.nix  run_benchmarks.sh
aimless-onions/benches/: benches.rs
aimless-onions/src/: allocation.rs  apitypes.rs  board.html  consensus.rs  format.rs  hibe.rs  lib.rs  nodename.rs  shared.rs
scripts/: benches.sh  prepare-consensus.sh  test_environment.sh
tor-diff-size/: Cargo.toml  diffsize.py
tor-diff-size/src/: main.rs
tor-measurement-script/: measure.py
