[package]
name = "aimless-onions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
arrayvec = { version = "0.7.4", features = ["serde"] }
bincode = "1.3.3"
bls12_381_plus = "0.8.9"
chrono = "0.4.37"
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.3.0"
ctr = "0.9.2"
ff = "0.13.0"
fnv = "1.0.7"
group = "0.13.0"
hmac = { version = "0.12.1", features = ["std"] }
hohibe = { git = "https://codeberg.org/dunj3/hohibe" }
hyper = { version = "1.0.1", features = ["server", "client", "http1"] }
once_cell = "1.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.2"
reqwest =  { version = "0.11.22", features = ["native-tls", "json"] }
rustls = { version = "0.21.9", features = ["dangerous_configuration"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.108"
sha3 = "0.10.8"
shamir_secret_sharing = "0.1.1"
tokio = { version = "1.34.0", features = ["macros", "rt", "net", "rt-multi-thread", "sync", "signal"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = { version = "0.3.6", features = ["tls"] }
webpki = { version = "0.22.4", features = ["std", "alloc"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[profile.release]
debug = true

[[bin]]
name = "allocate"

[[bin]]
name = "authority"

[[bin]]
name = "board"

[[bin]]
name = "client"

[[bin]]
name = "relay"

[[bin]]
name = "onion_sizes"

[[bench]]
name = "benches"
harness = false
