[package]
name = "tor-diff-size"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
#tor-circmgr = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
#tor-linkspec = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
#tor-proto = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
arti-client = { version = "0.30", features = ["experimental-api"] }
tor-circmgr = { version = "0.30", features = ["specific-relay"] }
hex = "*"
sha3 = "0.10.8"
